# deep_heuristic_for_grasping_sharework

heuristic_grasping_sharework/: CMakeLists.txt  package.xml
heuristic_grasping_sharework/msg/: CustomBox.msg  Feasibility.msg
heuristic_grasping_sharework/srv/: EstimateObjectsFeasibility.srv
